--- a/css/global.css
+++ b/css/global.css
@@ -23,6 +23,8 @@ body {
 main {
   width: 100%;
   min-height: calc(100vh - 27rem); /* 27rem from Body, Header & Footer */
+  padding-bottom: 4rem;
+  position: relative;
 }
 
 /* Tablets View */
