--- a/css/faq.css
+++ b/css/faq.css
@@ -44,6 +44,7 @@
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
+  text-align: justify;
 }
 .accordion-item-body-content {
   padding: 1rem;
